fixed expand contract bug on mobile

--- a/_/components/less/_mystyles.less
+++ b/_/components/less/_mystyles.less
@@ -1072,6 +1072,10 @@ footer {
 		margin-right: -30px;
 		
 	}
+	
+	#footer-find-housing {
+		right:375px;
+	}
 
 }
 
@@ -1160,6 +1164,10 @@ footer {
    
 			padding: 42px 20px 42px 15px;
 		}
+	}
+	
+	#footer-find-housing {
+		right:0px;
 	}
 
 }
